[tool.poetry]
name = "nonebot-plugin-random_draw"
version = "0.0.1"
description = "通过添加各种想要抽取的内容，最后进行随机抽取。"
authors = ["Ikaros <327209194@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_random_draw"}]
homepage = "https://github.com/Ikaros-521/nonebot_plugin_random_draw"
repository = "https://github.com/Ikaros-521/nonebot_plugin_random_draw"
documentation = "https://github.com/Ikaros-521/nonebot_plugin_random_draw/blob/master/README.md"

# 添加清华镜像
[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true  # 设置清华镜像为默认回调, 以避免 poetry 在某些缺省操作里又回调到 pypi 仓库.

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0b5"
nonebot-adapter-onebot = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
